# core-bff

./: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yaml
migrations/: env.py
src/app/: database.py  main.py  schemas.py
src/app/api/endpoints/: health.py
src/app/core/: config.py  logger.py
tests/: conftest.py  test_main.py
